# mockoon-rustify

./: .env  Cargo.toml  Dockerfile  README.md  api-config.json  docker.sh
1234-FI/: data.json
data/: api-config.json
src/: main.rs
src/model/: mod.rs
src/resources/: mod.rs
src/util/: mod.rs
ssl/: cert.pem  key.pem
