[package]
name = "mockoon-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
#actix-web-lab = "0.18"
#actix-files = "0.6"
rustls = "0.20.2"
rustls-pemfile = "1"
actix-cors = "0.6.4"
tokio = { version = "1.21.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10.0"
chrono = "0.4"
base64-url = "1.4.13"
clap = "4.0.29"